fix: minor spacing correction

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -149,4 +149,5 @@ button:hover {
 
 #clock {
     color: #EEE;
+    margin-right: 0px;
 }
